<resources>
    <string name="app_name">Glamvoir</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_upload">UPLOAD</string>
    <string name="edit">EDIT</string>
    <string name="search_hint">Search</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="home_descriptiopn">Discover, Inspire, share...\nFashion, Food and More</string>
    <string name="nav_item_home">FLEA MARKET</string>
    <string name="nav_item_friends">FOLLOWER</string>
    <string name="nav_item_follwing">FOLLOWING</string>
    <string name="nav_item_my_save">MY SAVES</string>
    <string name="nav_item_my_post">MY POST</string>
    <string name="nav_item_setting">SETTING</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="crash_text">App crashed </string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/title_follower</item>
        <item>@string/title_following</item>
        <item>@string/title_mysave</item>
        <item>@string/title_post</item>
        <item>@string/title_setting</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_feed">FEED</string>
    <string name="title_follower">FOLLOWERS</string>
    <string name="title_following">FOLLOWING</string>
    <string name="title_home">FLEA MARKET</string>
    <string name="title_mysave">MY SAVES</string>
    <string name="title_post">MY POST</string>
    <string name="post">POST</string>
    <string name="title_setting">SETTING</string>
    <string name="internet_connection_error">Please check your internet connection and try again later!!</string>
    <string name="internet_error">No internet connection</string>
    <string name="internet_settings">Settings</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_fname">Please enter the first name</string>
    <string name="invalid_lname">Please enter the last name</string>
    <string name="password_short">Minimum password length is 5</string>
    <string name="invalid_number">Not a valid mobile number</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="password_same">New password can not same</string>
    <string name="gmail_otp">OTP Length is 4</string>
    <string name="signup">SIGN UP</string>
    <string name="signin">SIGN IN</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="mysave">MY SAVES</string>
    <string name="alert">ALERTS</string>
    <string name="mypost">MY POSTS</string>
    <string name="setting">SETTINGS</string>
    <string name="user_name">Hello Glamvoir</string>
    <string name="member_period">Member since jan 2000</string>
    <string name="myaccount">MY ACCOUNT</string>
    <string name="my_city">MY CITY</string>
    <string name="we_are_hiring">WE ARE HIRING</string>
    <string name="contact_us">CONTACT US</string>
    <string name="terms_condition">TERMS AND PRIVACY POLICY</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="f_a_q">FAQ</string>
    <string name="signout">SIGNOUT</string>
    <string name="changepwd">Change Password</string>
    <string name="delaccount">Delete Account</string>
    <string name="done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string-array name="settings_labels">

        <item>@string/myaccount</item>
        <item>@string/my_city</item>
        <item>@string/we_are_hiring</item>
        <item>@string/contact_us</item>
        <item>@string/terms_condition</item>
        <item>@string/privacy_policy</item>
        <item>@string/f_a_q</item>
        <item>@string/signout</item>

    </string-array>
    <string name="user_call">CALL</string>
    <string name="user_msg">MESSAGE</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="email_description">We have send an OTP on your email, Please enter that</string>
    <string name="app_id">1645342315721002</string>
    <string name="wrong_category">Wrong category</string>
    <string name="dont_show">Dont not show me post from this user</string>
    <string name="roport">Report Abuse</string>
    <string name="question_one">WHAT IS GLAMVOIR?</string>
    <string name="question_one_anwer"> \n-	Glamvoir is a community of members. It’s a medium to interact with other community members on fashion, lifestyle, food, music, and avocational interests.  Glamvoir community consists of fashion stores, designers, boutiques, connoisseurs, gourmets, chefs, cafe, restaurants, bars, lounges, artists, performers, photographers, writers and everyone else who fits in between.
     \n-You can connect with fellow members of the community by simply uploading a post and get replies from them. Not just that, you can also chat with distinguished members in your city by sending them personalized messages – such as stylists, hairdressers, nutritionists, yoga instructors, photographers, caterers etc.
     \n-Story sharing and inspiring! If you feel there is something worthy out there on the internet which is interesting, informative, or inspiring then please share it. You can upload picture stories of your personal style, your reflections on seasonal fashion verve, comment on celebrity style, share beauty tips; review a product, store, designer or brand. Inspire all for the love of Glamvoir community.
     \n-Glamvoir allows you to discover fashion and lifestyle products, collections at different fashion stores, food places, bars, gigs, art workshops and events in your city. You can save your awesome discoveries and events for your reference later.
      \n-Glamvoir is also an open market place where fashionistas, designers, boutiques can sell or auction their apparels, accessories, footwear and lifestyle products by connecting with their buyers through whatsapp. For other community members, they can sell their used fashion and lifestyle products to an interested buyer of the Glamvoir community.
      \n-Follow what you love and love what you follow!</string>
    <string name="question_two">HOW TO CREATE MY ACCOUNT?</string>
    <string name="question_two_anwer">
        \n -Signing up to create an account is easy. You can sign up with your google or facebook account and your account automatically gets created.
        \n-You can also create an account by pressing sign up button on the home screen and enter your basic details like, name, gender, email, phone number and then set your password for signing in, should you get signed outout later.
    </string>
    <string name="question_three">HOW TO CREATE AN ACCOUNT FOR MY ESTABLISHMENT?</string>
    <string name="question_three_anwer">
    \n -	User account for any establishment such as boutiques, stores, restaurants, café, bar, catering company, etc. can be created in the same way as an account is created for an individual.
    \n -Please bear in mind that Glamvoir fetches details of your facebook or google account when you sign up through them. Therefore, for avoiding wrong details to be used in your profile, please make sure that you use the correct facebook or google account of your establishment for signing up with Glamvoir.
    \n -When you sign up to create an account by filling in all your details, the creator of the account should enter his or her gender and age. Details like name, email and phone number should be of the establishment

    </string>
    <string name="question_four"> WHY SHOULD I UPDATE MY ACCOUNT?</string>
    <string name="question_four_anwer">
    \n-It is strongly recommended that you update your profile so that you could benefit from using all Glamvoir features, such as (i) connecting with sellers/buyers, stylists, etc. through whatsapp messenger (ii) making location of your establishment trackable for members (iii) allowing members to know what’s most appealing about you or your establishment.
    \n-To update your profile details you will have to press SETTINGS button in your dashboard and then press MY ACCOUNT. Under MY ACCOUNT please fill in your phone number, age and location (if it is an account for an establishment). Please write about yourself or your establishment under ABOUT ME so that you are known to the community better.
   </string>
    <string name="question_five">HOW TO CHANGE MY DISPLAY PICTURE?</string>
    <string name="question_five_anwer">
    -	By pressing the camera button or your existing display picture above your name on top of your dashboard you can change your display picture
    </string>
    <string name="question_six">WHAT CAN I DO IF I AM TRAVELLING OR RELOCATED TO ANOTHER CITY?</string>
    <string name="question_six_anwer">
   -	To update or change your city preference, you will have to press SETTINGS button in your dashboard and then press MY CITY. By selecting a different city you can change your city preference. After changing your city you will start viewing posts which are specific to that city along with posts which are general and visible for all cities
    </string>
    <string name="question_seven"> HOW CAN I UPLOAD A POST?</string>
    <string name="term_one"> 1. Acceptable use</string>
    <string name="term_one_answer"> This Privacy Policy governs the manner in which Boom Marcom Services Private Limited (“Glamvoir”) collects, uses, maintains and discloses information collected from user(s) (“User”) of the www.glamvoir.com website and mobile app Glamvoir (the “Site”). This Privacy Policy applies only to the Site and any products and services offered directly by Glamvoir.
This electronic record is digitally generated and does not require any kind of signature (physical or digital) for it to be legally binding.  By registering or using the Site you agree to be bound by the terms and conditions as contained in this Privacy Policy. This privacy policy is incorporated by reference to the Terms and Conditions of Use of Glamvoir.com. Our Privacy Policy is subject to any amendment without providing you any prior notice. Please review this policy periodically for staying aware of any changes. In case you do not wish to be bound by any of our terms and conditions of use you are advised not to register or use any features of our Site. Continued use of the Site following the posting of any changes to this policy constitutes your acceptance of those changes.
</string>
    <string name="term_Two">Personal identification information</string>
    <string name="term_three">Non-personal identification information</string>
    <string name="term_three_answer">We may collect non-personal identification information about Users whenever they interact with our Site. Non-personal identification information may include the User’s browser name, type of computer and technical information about Users means of connection to our Site, such as the User’s operating system, the Internet service providers and other similar information.</string>
    <string name="about_us">About Us</string>
    <string name="txtCredits"><a href="glamvoir@gmail.com">Contact Us:glamvoir@gmail.com </a></string>
</resources>