<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/appbar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/imageView5"
        android:src="@drawable/fontlogo"
        android:layout_gravity="center_horizontal" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="@dimen/margin_bottom_large"
        android:layout_gravity="center"
        android:text="@string/about_us"
        android:id="@+id/textView20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:hint="@string/term_one_answer"
        android:layout_margin="@dimen/margin_bottom_large"
        android:id="@+id/textView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="center"
        android:textColor="@color/com_facebook_blue"
        android:text="@string/txtCredits"
        android:textSize="22sp"
        android:id="@+id/textView22" />
</LinearLayout>
</ScrollView>

</LinearLayout>