<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    android:orientation="vertical">

    <include layout="@layout/appbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_top_large"
        android:gravity="top"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/myaccount_inputname"
            style="@style/TestInputTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/myaccount_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_bottom_xlarge"
                android:ems="10"
                android:hint="First Name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/textsize_normal" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_top_normal"
            android:layout_marginLeft="@dimen/padding_top_normal"
            android:gravity="center"
            android:weightSum="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gender"
                android:layout_weight="1"
                android:id="@+id/textView24" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_weight="1"
                android:id="@+id/checkBox" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_weight="1"
                android:id="@+id/checkBox2" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/padding_top_normal"
            android:layout_marginLeft="@dimen/padding_top_normal"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/padding_top_normal"
            android:background="@color/button_material_light"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/myaccount_inputmail"
            style="@style/TestInputTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/myaccount_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="Email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/textsize_normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/myaccount_inputabtme"
            style="@style/TestInputTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/myaccount_abtme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="About Me"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/textsize_normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/myaccount_inputphone"
            style="@style/TestInputTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/myaccount_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="Phone Number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textSize="@dimen/textsize_normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/myaccount_inputlocation"
            style="@style/TestInputTheme"
            app:hintTextAppearance="@android:style/TextAppearance.Medium">

            <EditText
                android:id="@+id/myaccount_loction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="Location"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="@dimen/textsize_normal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/singnin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_normal"
            android:layout_marginRight="@dimen/margin_right_normal"
            android:layout_marginTop="@dimen/margin_top_large"
            android:background="@drawable/corner_button_dip"
            android:text="@string/done"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/changepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/changepwd"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textsize_large" />

    </LinearLayout>

</LinearLayout>
